fix false api endpoints in swagger
